--- a/web/blanco.xhtml
+++ b/web/blanco.xhtml
@@ -15,11 +15,11 @@
             <![endif]-->
         <title>Free Responsive Admin Theme - ZONTAL</title>
         <!-- BOOTSTRAP CORE STYLE  -->
-        <link href="resources/assets/css/bootstrap.css" rel="stylesheet" />
+        <link href="../../resources/assets/css/bootstrap.css" rel="stylesheet" />
         <!-- FONT AWESOME ICONS  -->
-        <link href="resources/assets/css/font-awesome.css" rel="stylesheet" />
+        <link href="../../resources/assets/css/font-awesome.css" rel="stylesheet" />
         <!-- CUSTOM STYLE  -->
-        <link href="resources/assets/css/style.css" rel="stylesheet" />
+        <link href="../../resources/assets/css/style.css" rel="stylesheet" />
         <!-- HTML5 Shiv and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
@@ -80,7 +80,7 @@
                         <div class="navbar-collapse collapse ">
                             <ul id="menu-top" class="nav navbar-nav navbar-right">
 
-                                <li><a href="Vistas/cliente/List.xhtml">Clientes</a></li>
+                                <li><a href="../Vistas/cliente/List.xhtml">Clientes</a></li>
                                 <li><a href="Vistas/suscripcion/List.xhtml">Suscripciones</a></li>
                                 <li><a href="Vistas/usuario/List.xhtml">Usuarios</a></li>
                             </ul>
@@ -116,9 +116,9 @@
         <!-- FOOTER SECTION END-->
         <!-- JAVASCRIPT AT THE BOTTOM TO REDUCE THE LOADING TIME  -->
         <!-- CORE JQUERY SCRIPTS -->
-        <script src="resources/assets/js/jquery-1.11.1.js"></script>
+        <script src="../resources/assets/js/jquery-1.11.1.js"></script>
         <!-- BOOTSTRAP SCRIPTS  -->
-        <script src="resources/assets/js/bootstrap.js"></script>
+        <script src="../resources/assets/js/bootstrap.js"></script>
 
     </h:body>
 </html>
