--- a/web/Vistas/cliente/home.xhtml
+++ b/web/Vistas/cliente/home.xhtml
@@ -6,7 +6,7 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
 
-    <ui:composition template="/blanco.xhtml">
+    <ui:composition template="../../template.xhtml">
 
 
         <ui:define name="title">
@@ -22,6 +22,7 @@
                                  rowKey="#{thing.idSuscripcion}"
                                  rows="10"
                                  rowsPerPageTemplate="10,20,30,40,50"
+                                 emptyMessage="#{bundle.HomeListEmpty}"
                                  >
                         
                         <p:column>
