--- a/web/Vistas/cliente/Create.xhtml
+++ b/web/Vistas/cliente/Create.xhtml
@@ -5,17 +5,16 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
-
+    
     <ui:composition>
 
         <p:dialog id="ClienteCreateDlg" widgetVar="ClienteCreateDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.CreateClienteTitle}">
             <h:form id="ClienteCreateForm">
                 <input type="hidden" value="#{clienteController.fechaActual}"></input>
                 <h:panelGroup id="display" >
-                    <p:fieldset legend="Datos del Cliente">
-                        <h:panelGrid columns="2" rendered="#{clienteController.selected != null}">
+                    <p:fieldset >
+                        <p:panelGrid columns="2" rendered="#{clienteController.selected != null}">
                             <p:outputLabel value="#{bundle.CreateClienteLabel_foto}" for="foto" /> 
-                             <!--<p:fileUpload id="foto" validator="#{clienteController.validarFoto}" multiple="false" allowTypes="/(\.|\/)(gif|jpe?g|png)$/"  value="#{clienteController.selected.foto}" required="true" mode="simple"/>-->
                             <p:inputTextarea rows="4" cols="30" id="foto" value="#{clienteController.selected.foto}" title="#{bundle.CreateClienteTitle_foto}" />
                             <p:outputLabel value="#{bundle.CreateClienteLabel_nombres}" for="nombres" />
                             <p:inputText id="nombres" value="#{clienteController.selected.nombres}" title="#{bundle.CreateClienteTitle_nombres}" required="true" requiredMessage="#{bundle.CreateClienteRequiredMessage_nombres}"/>
@@ -36,11 +35,11 @@
                             <p:inputText id="direccion" value="#{clienteController.selected.direccion}" title="#{bundle.CreateClienteTitle_direccion}" required="true" requiredMessage="#{bundle.CreateClienteRequiredMessage_direccion}"/>
                             <p:outputLabel value="#{bundle.CreateClienteLabel_telefono}" for="telefono" />
                             <p:inputText id="telefono" value="#{clienteController.selected.telefono}" title="#{bundle.CreateClienteTitle_telefono}" required="true" requiredMessage="#{bundle.CreateClienteRequiredMessage_telefono}"/>
-                        </h:panelGrid> 
+                        </p:panelGrid> 
                     </p:fieldset>
 
-                    <p:fieldset legend="Datos de suscripcion">
-                        <p:panelGrid columns="2">
+                    <p:fieldset legend="hhh"> 
+                        <p:panelGrid columns="2"> 
                             <p:outputLabel value="#{bundle.CreateSuscripcionLabel_fechaInicio}" />
                             <p:calendar id="fechaInicio" pattern="yyyy-MM-dd" value="#{clienteController.nuevasuscripcion.fechaInicio}" title="#{bundle.EditSuscripcionTitle_fechaInicio}"  showOn="button" readonlyInput="true" effect="fold" locale="es">
                                 <p:ajax event="dateSelect" listener="#{clienteController.fechaFinal}" update="fechaFin" />
@@ -48,7 +47,7 @@
                             <p:outputLabel value="#{bundle.CreateSuscripcionLabel_fechaFin}" />
                             <p:calendar id="fechaFin" pattern="yyyy-MM-dd" value="#{clienteController.nuevasuscripcion.fechaFin}" readonlyInput="true" showOn="button" effect="fold" locale="es"></p:calendar> 
                         </p:panelGrid>
-                    </p:fieldset>  
+                    </p:fieldset> 
 
                     <p:commandButton actionListener="#{clienteController.crear()}" value="#{bundle.Save}" update="display,:ClienteListForm:datalist,:growl" oncomplete="handleSubmit(args,'ClienteCreateDialog');"/>
                     <p:commandButton value="#{bundle.Cancel}" onclick="ClienteCreateDialog.hide()"/>
