--- a/web/Vistas/usuario/Create.xhtml
+++ b/web/Vistas/usuario/Create.xhtml
@@ -17,7 +17,7 @@
                         <p:outputLabel value="#{bundle.CreateUsuarioLabel_nombreUsuario}" for="nombreUsuario" />
                         <p:inputText id="nombreUsuario" value="#{usuarioController.selected.nombreUsuario}" title="#{bundle.CreateUsuarioTitle_nombreUsuario}" required="true" requiredMessage="#{bundle.CreateUsuarioRequiredMessage_nombreUsuario}"/>
                         <p:outputLabel value="#{bundle.CreateUsuarioLabel_clave}" for="clave" />
-                        <p:inputText id="clave" value="#{usuarioController.selected.clave}" title="#{bundle.CreateUsuarioTitle_clave}" />
+                        <p:password id="clave" value="#{usuarioController.claveencriptada}" title="#{bundle.CreateUsuarioTitle_clave}"/>
                         <p:outputLabel value="#{bundle.CreateUsuarioLabel_estado}" for="estado" />
                         <p:selectBooleanCheckbox id="estado" value="#{usuarioController.selected.estado}" />
                     </p:panelGrid>
