--- a/web/Vistas/suscripcion/Create.xhtml
+++ b/web/Vistas/suscripcion/Create.xhtml
@@ -12,10 +12,21 @@
             <h:form id="SuscripcionCreateForm">
                 <input type="hidden" value="#{suscripcionController.fechaActual}"></input>
                 <h:panelGroup id="display">
-                  
+
                     <p:panelGrid columns="2" rendered="#{suscripcionController.selected != null}">
+                        <p:outputLabel value="Termino Suscripcion" for="terminoSuscripcion"/>
+                        <p:selectOneMenu id="terminoSuscripcion" value="#{suscripcionController.terminosuscripcion}" required="true" requiredMessage="#{bundle.EditSuscripcionRequiredMessage_clienteIdCliente}">
+                            <p:ajax listener="#{suscripcionController.fechaFinal}" update="fechaFin" />
+                            <f:selectItem itemLabel="Seleccione" itemValue="" />
+                            <f:selectItem itemLabel="Un Mes" itemValue="Un Mes" />
+                            <f:selectItem itemLabel="Dos Meses" itemValue="Dos Meses" />
+                            <f:selectItem itemLabel="Tres Meses" itemValue="Tres Meses" />
+                            <f:selectItem itemLabel="Seis Meses" itemValue="Seis Meses" />
+                        </p:selectOneMenu>
                         <p:outputLabel value="#{bundle.CreateSuscripcionLabel_fechaInicio}" for="fechaInicio" />
-                        <p:calendar id="fechaInicio" pattern="yyyy-MM-dd" value="#{suscripcionController.selected.fechaInicio}" title="#{bundle.EditSuscripcionTitle_fechaInicio}" readonlyInput="true" showOn="button" locale="es"/>
+                        <p:calendar id="fechaInicio" pattern="yyyy-MM-dd" value="#{suscripcionController.selected.fechaInicio}" title="#{bundle.EditSuscripcionTitle_fechaInicio}" readonlyInput="true" showOn="button" locale="es">
+                            <p:ajax event="dateSelect" listener="#{suscripcionController.fechaFinal}" update="fechaFin" />
+                        </p:calendar>
                         <p:outputLabel value="#{bundle.CreateSuscripcionLabel_fechaFin}" for="fechaFin" />
                         <p:calendar id="fechaFin" pattern="yyyy-MM-dd" value="#{suscripcionController.selected.fechaFin}" title="#{bundle.EditSuscripcionTitle_fechaFin}" readonlyInput="true" showOn="button" locale="es"/>
                         <p:outputLabel value="#{bundle.CreateSuscripcionLabel_estado}" for="estado" />
@@ -28,7 +39,7 @@
                                            itemLabel="#{clienteIdClienteItem.nombres} #{clienteIdClienteItem.apellidos}"/>
                         </p:selectOneMenu>
                     </p:panelGrid>
-              
+
                     <p:commandButton actionListener="#{suscripcionController.create}" value="#{bundle.Save}" update="display,:SuscripcionListForm:datalist,:growl" oncomplete="handleSubmit(args,'SuscripcionCreateDialog');"/>
                     <p:commandButton value="#{bundle.Cancel}" onclick="SuscripcionCreateDialog.hide()"/>
                 </h:panelGroup>
