--- a/web/Vistas/cliente/Create.xhtml
+++ b/web/Vistas/cliente/Create.xhtml
@@ -5,17 +5,38 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
-    
+
     <ui:composition>
 
         <p:dialog id="ClienteCreateDlg" widgetVar="ClienteCreateDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.CreateClienteTitle}">
-            <h:form id="ClienteCreateForm">
+            <h:form id="ClienteCreateForm" enctype="multipart/form-data">
                 <input type="hidden" value="#{clienteController.fechaActual}"></input>
                 <h:panelGroup id="display" >
                     <p:fieldset >
+
+                        <p:panelGrid columns="3">
+                            <!--<p:outputLabel value="#{bundle.CreateClienteLabel_foto}" for="fileImagenCliente"/>-->
+                           <!-- <p:fileUpload id="fileImagenCliente" mode="single" fileUploadListener="#{clienteController.subirImagen}" 
+                                          cancelLabel="Cancelar" 
+                                          uploadLabel="Subir Imagen" 
+                                          label="Elegir" 
+                                          update="graImagenCliente" 
+                                          sizeLimit="512000" 
+                                          allowTypes="/(\.|\/)(gif|jpe?g|png)$/"/>
+                            <p:graphicImage id="graImagenCliente" value="#{clienteController.imagenCliente}" width="150" height="120"/>-->
+                        </p:panelGrid>
+                        <br></br>
                         <p:panelGrid columns="2" rendered="#{clienteController.selected != null}">
-                            <p:outputLabel value="#{bundle.CreateClienteLabel_foto}" for="foto" /> 
-                             <p:inputTextarea rows="4" cols="30" id="foto" value="#{clienteController.selected.foto}" title="#{bundle.EditClienteTitle_foto}" />
+                            <!--<p:outputLabel value="#{bundle.CreateClienteLabel_foto}" for="foto"/>
+                            <p:inputTextarea rows="4" cols="30" id="foto" value="#{clienteController.selected.foto}" title="#{bundle.EditClienteTitle_foto}" />-->
+                            <p:fileUpload id="fileImagenCliente" mode="single" fileUploadListener="#{clienteController.subirImagen}" 
+                                          cancelLabel="Cancelar" 
+                                          uploadLabel="Subir Imagen" 
+                                          label="Elegir" 
+                                          update="graImagenCliente" 
+                                          sizeLimit="512000" 
+                                          allowTypes="/(\.|\/)(gif|jpe?g|png)$/"/>
+                            <p:graphicImage id="graImagenCliente" value="#{clienteController.imagenCliente}" width="150" height="120"/>
                             <p:outputLabel value="#{bundle.CreateClienteLabel_nombres}" for="nombres" />
                             <p:inputText id="nombres" value="#{clienteController.selected.nombres}" title="#{bundle.CreateClienteTitle_nombres}" required="true" requiredMessage="#{bundle.CreateClienteRequiredMessage_nombres}"/>
                             <p:outputLabel value="#{bundle.CreateClienteLabel_apellidos}" for="apellidos" />
