--- a/web/recuperarClave.xhtml
+++ b/web/recuperarClave.xhtml
@@ -28,7 +28,7 @@
                     <a class="btn btn-navbar" data-toggle="collapse" data-target=".navbar-inverse-collapse">
                         <i class="icon-reorder shaded"></i>
                     </a>
-                    <a class="brand" href="welcomePrimefaces.xhtml">
+                    <a class="brand" href="Login.xhtml">
                         <img src="resources/images/Regimp1.png" width="147" height="20" alt="Regimp"/>
                     </a>
                 </div>
