--- a/web/Vistas/cliente/Create.xhtml
+++ b/web/Vistas/cliente/Create.xhtml
@@ -14,26 +14,23 @@
                 <h:panelGroup id="display" >
                     <p:fieldset>
 
-                        <!-- <p:panelGrid columns="3">
+                         <p:panelGrid columns="3">
                              <p:outputLabel value="#{bundle.CreateClienteLabel_foto}" for="fileImagenCliente"/>
-                             <p:fileUpload id="fileImagenCliente" value="#{clienteController.imagensubida}" mode="advanced" fileUploadListener="#{clienteController.subirImagen}" 
+                             <p:fileUpload id="fileImagenCliente" mode="advanced" fileUploadListener="#{clienteController.subirImagen}" 
                                            label="Elegir"  
                                            uploadLabel="Subir Imagen" 
                                            cancelLabel="Cancelar" 
                                            update="ICliente" 
-                                           sizeLimit="512000" 
+                                           
                                            auto="true"
                                            allowTypes="/(\.|\/)(gif|jpe?g|png|txt)$/"/>
                              <p:graphicImage id="ICliente" value="#{clienteController.imagenCliente}" width="150" height="120"/>
-                         </p:panelGrid>-->
+                         </p:panelGrid>
                         <br></br> 
                         <p:panelGrid columns="2" rendered="#{clienteController.selected != null}">
                             <!--<p:outputLabel value="#{bundle.CreateClienteLabel_foto}" for="foto"/>
                             <p:inputTextarea rows="4" cols="30" id="foto" value="#{clienteController.selected.foto}" title="#{bundle.EditClienteTitle_foto}" /> -->
-                            <p:fileUpload fileUploadListener="#{clienteController.subirImagen}" mode="single" dragDropSupport="false"
-                                          update="messages" sizeLimit="100000" fileLimit="3" allowTypes="/(\.|\/)(gif|jpe?g|png)$/" auto="true"/>
-
-                            <p:growl id="messages" showDetail="true" />
+                  
                             <p:outputLabel value="#{bundle.CreateClienteLabel_nombres}" for="nombres" />
                             <p:inputText id="nombres" value="#{clienteController.selected.nombres}" title="#{bundle.CreateClienteTitle_nombres}" required="true" requiredMessage="#{bundle.CreateClienteRequiredMessage_nombres}"/>
                             <p:outputLabel value="#{bundle.CreateClienteLabel_apellidos}" for="apellidos" />
