--- a/web/template.xhtml
+++ b/web/template.xhtml
@@ -15,7 +15,7 @@
         <!--[if IE]>
             <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
             <![endif]-->
-        <title>Free Responsive Admin Theme - ZONTAL</title>
+        <title>Gimnasio</title>
         <!-- BOOTSTRAP CORE STYLE  -->
         <h:outputStylesheet name="assets/css/bootstrap.css"/>
         <!-- FONT AWESOME ICONS  -->
