--- a/web/Vistas/suscripcion/List.xhtml
+++ b/web/Vistas/suscripcion/List.xhtml
@@ -38,7 +38,7 @@
                             <f:facet name="header">
                                 <h:outputText value="#{bundle.ListClienteTitle_foto}"/>
                             </f:facet>
-                            <h:outputText value="#{item.clienteIdCliente.foto}"/>
+                        <p:graphicImage id="foto" value="#{clienteController.mostrarImagen(item.clienteIdCliente.foto)}" height="100" width="100"/>
                         </p:column>
                         
                         <p:column>
