--- a/web/Vistas/cliente/Edit.xhtml
+++ b/web/Vistas/cliente/Edit.xhtml
@@ -11,11 +11,19 @@
         <p:dialog id="ClienteEditDlg" widgetVar="ClienteEditDialog" modal="true" resizable="false" appendTo="@(body)" header="#{bundle.EditClienteTitle}">
             <h:form id="ClienteEditForm">
                 <h:panelGroup id="display">
+                    <p:panelGrid columns="3">
+                        <p:outputLabel value="#{bundle.CreateClienteLabel_foto}" for="fileImagenCliente"/>
+                        <p:fileUpload id="fileImagenCliente" mode="advanced" fileUploadListener="#{clienteController.subirImagen}" 
+                                      label="Elegir"  
+                                      update="ICliente" 
+                                      sizeLimit="512000"
+                                      invalidSizeMessage="Tamaño de imagen excedido (Max:512 Kb)!"
+                                      auto="true"
+                                      allowTypes="/(\.|\/)(gif|jpe?g|png)$/"
+                                      invalidFileMessage="Archivo invalido, solo se permiten imágenes!"/>
+                        <p:graphicImage id="ICliente" value="#{clienteController.imagenCliente}" width="150" height="120"/>
+                    </p:panelGrid>
                     <p:panelGrid columns="2" rendered="#{clienteController.selected != null}">
-                        <p:outputLabel value="#{bundle.EditClienteLabel_idCliente}" for="idCliente" />
-                        <p:inputText id="idCliente" value="#{clienteController.selected.idCliente}" title="#{bundle.EditClienteTitle_idCliente}" required="true" requiredMessage="#{bundle.EditClienteRequiredMessage_idCliente}"/>
-                        <p:outputLabel value="#{bundle.EditClienteLabel_foto}" for="foto" />
-                        <p:inputTextarea rows="4" cols="30" id="foto" value="#{clienteController.selected.foto}" title="#{bundle.EditClienteTitle_foto}" />
                         <p:outputLabel value="#{bundle.EditClienteLabel_nombres}" for="nombres" />
                         <p:inputText id="nombres" value="#{clienteController.selected.nombres}" title="#{bundle.EditClienteTitle_nombres}" required="true" requiredMessage="#{bundle.EditClienteRequiredMessage_nombres}"/>
                         <p:outputLabel value="#{bundle.EditClienteLabel_apellidos}" for="apellidos" />
